--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div class="inner">
 			<div class="inner-content text-center">
 			<h1>Thomas Rhythm</h1>
-       		 <h6>Extraordinary art director & creative minimalism lover</h6>
+       		<span>Extraordinary art director & creative minimalism lover</span>
 			</div>
 			<!-- /inner content -->
 		</div>
