--- a/guide.html
+++ b/guide.html
@@ -13,6 +13,9 @@
 		<!-- Font awesome -->
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 
+		<!-- Grid style  -->
+		<link rel="stylesheet" href="css/grid.css">
+
 		<!-- Custom style -->
 		<link rel="stylesheet" href="css/style.css">
   </head>
@@ -79,6 +82,62 @@
 					<a href="#" class="btn btn-default">Default button</a>
 					<a href="#" class="btn btn-black">Black button</a>
 					<button class="btn btn-default btn-xs">Xs button</button>
+			</div>
+		</div>
+		<!-- grid -->
+		<div class="default-section">
+			<div class="container">
+				<div class="title section-title-light">
+					<span>Default grid</span>
+				</div>
+				<div class="row">
+					<div class="col col-6">
+						<p class="default-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolores dignissimos vel vero impedit expedita reiciendis aperiam dolor nostrum error illo debitis adipisci labore quae, maxime soluta aspernatur mollitia veniam?
+						</p>
+					</div>
+					<div class="col col-6">
+						<p class="default-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolores dignissimos vel vero impedit expedita reiciendis aperiam dolor nostrum error illo debitis adipisci labore quae, maxime soluta aspernatur mollitia veniam?
+						</p>	
+					</div>
+				</div>
+					<!-- /row -->
+				<div class="row">
+					<div class="col col-3">
+						<p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolores dignissimos vel vero impedit expedita reiciendis aperiam dolor nostrum error illo debitis adipisci labore quae, maxime soluta aspernatur mollitia veniam?</p>
+					</div>
+					<div class="col col-3">
+						<p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolores dignissimos vel vero impedit expedita reiciendis aperiam dolor nostrum error illo debitis adipisci labore quae, maxime soluta aspernatur mollitia veniam?</p>
+					</div>
+					<div class="col col-3">
+						<p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolores dignissimos vel vero impedit expedita reiciendis aperiam dolor nostrum error illo debitis adipisci labore quae, maxime soluta aspernatur mollitia veniam?</p>
+					</div>
+					<div class="col col-3">
+						<p class="default-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi dolores dignissimos vel vero impedit expedita reiciendis aperiam dolor nostrum error illo debitis adipisci labore quae, maxime soluta aspernatur mollitia veniam?</p>
+					</div>
+				
+				</div>
+				<!-- /row -->
+				<div class="row">
+					<div class="col col-4">
+						<blockquote>
+							<p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.</p>
+							<span>— Louis Kahn</span>
+						</blockquote>	
+					</div>
+					<div class="col col-4">
+						<p class="default-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam blanditiis rem, minus dolorem saepe odit? Provident, in, quisquam soluta temporibus minima debitis sit aspernatur amet impedit minus et eaque veritatis.
+						</p>
+					</div>
+					<div class="col col-4">
+						<p class="default-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam non ullam dolores tenetur obcaecati omnis at facere possimus voluptates exercitationem ducimus recusandae veritatis, saepe praesentium error incidunt itaque minus reprehenderit.
+						</p>
+					</div>
+					
+				</div>
 			</div>
 		</div>
   </body>
