--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!-- Font awesome -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
+	<!-- Grid style  -->
+	<link rel="stylesheet" href="css/grid.css">
+	
 	<!-- Custom style -->
 	<link rel="stylesheet" href="css/style.css">
   </head>
@@ -47,9 +50,94 @@
 			</div>
 			<!-- /inner content -->
 		</div>
-		<!-- inner -->
+		<!-- /inner -->
+		<div class="default-section about-studio">
+			<div class="container">
+				<div class="title section-title">
+					<span>About studio</span>
+				</div>
+				<!-- /title -->
+				<div class="row">
+						<div class="col col-4">
+							<blockquote>
+								<p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.</p>
+								<span>— Louis Kahn</span>
+							</blockquote>	
+						</div>
+						<!-- /col -->
+						<div class="col col-4">
+							<p class="default-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam blanditiis rem, minus dolorem saepe odit? Provident, in, quisquam soluta temporibus minima debitis sit aspernatur amet impedit minus et eaque veritatis.
+							</p>
+						</div>
+						<!--/ col -->
+						<div class="col col-4">
+							<p class="default-text">
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam non ullam dolores tenetur obcaecati omnis at facere possimus voluptates exercitationem ducimus recusandae veritatis, saepe praesentium error incidunt itaque minus reprehenderit.
+							</p>
+						</div>
+						<!--/col  -->
+				</div>
+				<!-- /row -->
+				<div class="team-wrapper">
+					<div class="row">
+						<div class="col col-4">
+							<div class="team-item">
+								<div class="team-item-img">
+									<img src="img/team-item-1.jpg" alt="">
+									<div class="team-item-skills"></div>
+								</div>
+								<!-- /team-item-img -->
+								<div class="team-item-info">
+									<span class="team-item-name">Thomas Rhythm</span>
+									<span class="team-item-role">Art director</span>
+								</div>
+								<!-- /team-item-info -->
+							</div>
+							<!-- /team-item -->
+						</div>
+						<!-- /col -->
+						<div class="col col-4">
+								<div class="team-item">
+									<div class="team-item-img">
+										<img src="img/team-item-2.jpg" alt="">
+										<div class="team-item-skills"></div>
+									</div>
+									<!-- /team-item-img -->
+									<div class="team-item-info text-center">
+										<span class="team-item-name">Marta Laning</span>
+										<span class="team-item-role">Web engineer</span>
+									</div>
+									<!-- /team-item-info -->
+								</div>
+								<!-- /team-item -->
+							</div>
+							<!-- /col -->
+							<div class="col col-4">
+								<div class="team-item">
+									<div class="team-item-img">
+										<img src="img/team-item-3.jpg" alt="">
+										<div class="team-item-skills"></div>
+									</div>
+										<!-- /team-item-img -->
+									<div class="team-item-info">
+										<span class="team-item-name">Steve ANDERS</span>
+										<span class="team-item-role">Developer</span>
+									</div>
+									<!-- /team-item-info -->
+								</div>
+								<!-- /team-item -->
+							</div>
+							<!-- /col -->
+					</div>
+					<!-- /row -->
+				</div>
+				<!-- /team-wrapper -->
+			</div>
+			<!-- /container -->
+		</div>	
+		<!-- /about-studio -->
 	</div>
 	<!-- Main end -->
-
 </body>
 </html>
