--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Landing</title>
+	<title>Landing</title>
+	
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400" rel="stylesheet">
+	
     <!-- Et-line icons -->
     <link rel="stylesheet" href="css/et-line.css">
 
@@ -22,7 +23,7 @@
   <body>
     <!-- Header start -->
 	<div class="header">
-		<div class="container container-fluid">
+		<div class="container-fluid">
 			<div class="logo">
 				<a href="#"></a>
 				<img src="img/logo.png" alt="">
@@ -57,7 +58,8 @@
 					<span>About studio</span>
 				</div>
 				<!-- /title -->
-				<div class="row">
+				<div class="about-us-text">
+					<div class="row">
 						<div class="col col-4">
 							<blockquote>
 								<p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.</p>
@@ -67,18 +69,20 @@
 						<!-- /col -->
 						<div class="col col-4">
 							<p class="default-text">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam blanditiis rem, minus dolorem saepe odit? Provident, in, quisquam soluta temporibus minima debitis sit aspernatur amet impedit minus et eaque veritatis.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. 
 							</p>
 						</div>
 						<!--/ col -->
 						<div class="col col-4">
 							<p class="default-text">
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam non ullam dolores tenetur obcaecati omnis at facere possimus voluptates exercitationem ducimus recusandae veritatis, saepe praesentium error incidunt itaque minus reprehenderit.
+								Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.
 							</p>
 						</div>
 						<!--/col  -->
-				</div>
+					</div>
 				<!-- /row -->
+			</div>
+			<!-- /about-us-text -->
 				<div class="team-wrapper">
 					<div class="row">
 						<div class="col col-4">
@@ -88,7 +92,7 @@
 									<div class="team-item-skills"></div>
 								</div>
 								<!-- /team-item-img -->
-								<div class="team-item-info">
+								<div class="team-item-info text-center">
 									<span class="team-item-name">Thomas Rhythm</span>
 									<span class="team-item-role">Art director</span>
 								</div>
@@ -120,7 +124,7 @@
 										<div class="team-item-skills"></div>
 									</div>
 										<!-- /team-item-img -->
-									<div class="team-item-info">
+									<div class="team-item-info text-center">
 										<span class="team-item-name">Steve ANDERS</span>
 										<span class="team-item-role">Developer</span>
 									</div>
@@ -136,8 +140,170 @@
 			</div>
 			<!-- /container -->
 		</div>	
-		<!-- /about-studio -->
+		<!-- /about-studio --> 
+		<div class="default-section services"> 
+			<div class="container">
+				<div class="title section-title text-center">
+					<span>Services</span>
+				</div>
+					<!-- /services title -->
+					<div class="tabs-wrapper">
+						<div id="tabs">
+								<ul class="tabs-nav">
+									<li>
+										<a href="#branding"><span class="icon icon-strategy"><span>Branding</span></span></a>
+									</li>
+									<li>
+										<a href="#web-design"><span class="icon icon-desktop"><span>Web design</span></span></a>
+									</li>
+									<li>
+										<a href="#graphic-design"><span class="icon icon-tools"><span>Graphic design</span></span></a>
+									</li>
+									<li>
+										<a href="#development"><span class="icon icon-gears"><span>Development</span></span></a>
+									</li>
+									<li>
+										<a href="#photography"><span class="icon icon-camera"><span>Photography</span></span></a>
+									</li>
+								</ul>
+								<div id="branding">
+									<div class="row">
+										<div class="col col-4">
+										<blockquote>
+											<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
+											<span>— Jeff Bezos</span>
+										</blockquote>	
+										</div>
+										<!-- /col -->
+										<div class="col col-4">
+										<p class="default-text">
+											Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis. 
+										</p>
+										</div>
+										<!--/ col -->
+										<div class="col col-4">
+										<p class="default-text">
+											Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
+										</p>
+										</div>
+										<!--/col  -->
+									</div>
+									<!-- /row -->
+								</div>
+								<div id="web-design">
+									<div class="row">
+										<div class="col col-4">
+											<blockquote>
+												<p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.</p>
+												<span>— Louis Kahn</span>
+											</blockquote>	
+										</div>
+										<!-- /col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis. 
+											</p>
+										</div>
+										<!--/ col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
+											</p>
+										</div>
+										<!--/col  -->
+									</div>
+									<!-- /row -->			
+								</div>
+								<div id="graphic-design">
+									<div class="row">
+										<div class="col col-4">
+											<blockquote>
+												<p>A brand for a company is like 
+												a reputation for a person. You earn reputation by trying to do hard things well.</p>
+												<span>— Jeff Bezos</span>
+											</blockquote>	
+										</div>
+										<!-- /col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis.  
+											</p>
+										</div>
+										<!--/ col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
+											</p>
+										</div>
+										<!--/col  -->
+									</div>
+									<!-- /row -->
+								</div>
+								<div id="development">
+									<div class="row">
+										<div class="col col-4">
+											<blockquote>
+												<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
+												<span>— Jeff Bezos</span>
+											</blockquote>	
+										</div>
+										<!-- /col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis.  
+											</p>
+										</div>
+										<!--/ col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
+											</p>
+										</div>
+										<!--/col  -->
+									</div>
+									<!-- /row -->
+								</div>
+								<div id="photography">
+									<div class="row">
+										<div class="col col-4">
+											<blockquote>
+												<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
+												<span>— Jeff Bezos</span>
+											</blockquote>	
+										</div>
+										<!-- /col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum volutpat nibh, accumsan purus. Lorem ipsum dolor sit semper amet, consectetur adipiscing elit. In maximus ligula metus pellentesque mattis. 
+											</p>
+										</div>
+										<!--/ col -->
+										<div class="col col-4">
+											<p class="default-text">
+												Donec vel ultricies purus. Nam dictum sem, ipsum aliquam . Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. 
+											</p>
+										</div>
+										<!--/col  -->
+									</div>
+									<!-- /row -->
+								</div>
+						</div>
+						<!-- /tabs -->
+					</div>
+					<!-- /tabs-wrapper -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /services -->
 	</div>
 	<!-- Main end -->
+
+	<!-- JQuery -->
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<!-- JQuery UI -->
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+	<!-- Init plugins -->
+	<script src="js/init.js"></script>
 </body>
 </html>
