Portfolio, why choose us

--- a/guide.html
+++ b/guide.html
@@ -169,7 +169,35 @@
 				</div>
 				<!-- /container -->
 			</div>
-			<!-- /services -->
+			<!-- form elements -->
+			<div class="default-section guid-section">
+				<div class="container">
+					<div class="title section-title-light">
+						<span>Form elements</span>				
+					</div>
+					<div class="row">
+						<div class="col col-6">
+							<form>
+								<input type="text" name="name" class="form-control" placeholder="NAME">
+								<input type="email" name="email" class="form-control" placeholder="EMAIL">
+								<textarea name="message" class="form-control" placeholder="MESSAGE"></textarea>
+								<input type="text" name="name" class="form-control disabled" placeholder="Disabled" disabled>
+								<input type="email" name="email" class="form-control" placeholder="EMAIL" value="example@gmail.com">
+								<input type="email" name="email" class="form-control error" placeholder="EMAIL">
+								<input type="submit" value="Send" class="btn btn-black">
+								<button type="submit" class="btn btn-black">Send message</button>
+								<button type="submit" class="btn btn-black" disabled>Disabled button</button>
+							</form>
+							<!-- /form -->
+						</div>
+						<!-- /col -->
+					</div>
+					<!-- /row -->
+				</div>
+				<!-- /container -->
+			</div>
+			<!-- /guid-section -->
+
 		</div>
 
   </body>
