--- a/index.html
+++ b/index.html
@@ -295,6 +295,199 @@
 			<!-- /container -->
 		</div>
 		<!-- /services -->
+		<div class="lets-talk bg-black">
+			<div class="container">
+				<div class="row">
+					<div class="col col-6">
+						<div class="lets-talk-content">
+							<div class="title section-title-light title-white">
+							<span>Looking for exclusive digital services?</span>
+							</div>
+							<!-- /lets-talk title -->
+							<p class="default-text">Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. 
+							Integer non dapibus diam, ac eleifend lectus.</p>
+							<button class="btn btn-default">Lets talk</button>
+						</div>
+						<!-- /lets-lalk-content -->
+					</div>
+					<!-- /col -->
+					<div class="col col-6">
+						<img src="img/lets-talk-img.png" class="lets-talk-img" alt="">
+					</div>
+					<!-- /col -->
+				</div>
+				<!-- /row -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /lets-talk -->
+		<div class="default-section portfolio">
+			<div class="container-fluid">
+				<div class="title section-title text-center">
+					<span>Portfolio</span>
+				</div>	
+				<!-- /title-portfolio -->
+				<p class="portfolio-text default-text text-center">In auctor ex id urna faucibus porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
+				<div class="portfolio-wrapper">
+					<div id="tabs-portfolio">
+						<ul class="portfolio-tabs-nav">
+							<li>
+								<a href="#portfolio-all-works"><span>All works</span></span></a>
+							</li>
+							<li>
+								<a href="#portfolio-branding"><span>Branding</span></span></a>
+							</li>
+							<li>
+								<a href="#portfolio-design"><span> Design</span></span></a>
+							</li>
+							<li>
+								<a href="#portfolio-photography"><span>Photography</span></span></a>
+							</li>
+						</ul>
+						<div class="row">
+							<div class="portfolio-item">
+								<img src="img/portfolio-item-1.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
+								<img src="img/portfolio-item-2.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-3.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
+								<img src="img/portfolio-item-4.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
+								<img src="img/portfolio-item-5.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
+								<img src="img/portfolio-item-6.jpg" alt="">
+								</div>
+						</div>
+					
+						<!-- /row -->
+					</div>
+					<!-- /tabs-portfolio -->
+				</div>
+				<!-- /portfolio-wrapper -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /Portfolio -->
+		<div class="start-pfoject small-section bg-black text-center">
+			<div class="title title-white section-title-light">
+				<span>Like Our Creative Works?</span>
+			</div>
+			<a href="#" class="btn btn-default">Start Project</a>
+		</div>
+		 <!-- / start project -->
+		 <!-- Why choose us -->
+		 <div class="why-choose-us default-section">
+			<div class="container">
+				<div class="title section-title text-center"> 
+				<span>Why Choose Us?</span>
+				</div>
+				<div class="row">
+				<div class="col col-4">
+					<div class="advantages">
+					<span class="icon icon-flag"></span>
+					<div class="title-light text-center">
+						<span>We’re Creative</span>
+					</div>
+					<div class="default-text text-light">
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+						In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim.</p>
+					</div>
+					</div>
+				</div>
+				<!-- / col -->
+				<div class="col col-4">
+					<div class="advantages">
+					<span class="icon icon-clock"></span>
+					<div class="title-light text-center">
+						<span>We’re Punctual</span>
+					</div>
+					<div class="default-text text-light">
+						<p>Proin fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend, lorem fermentum orci sit amet, iaculis libero.</p>
+					</div>
+					</div>
+				</div>
+				<!-- / col -->
+				<div class="col col-4">
+					<div class="advantages">
+					<span class="icon icon-hotairballoon"></span>
+					<div class="title-light text-center">
+						<span>We have magic</span>
+					</div>
+					<div class="default-text text-light">
+						<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta. Nulla facilisi. Suspendisse ultricies eros blandit.</p>
+					</div>
+					</div>
+				</div>
+				<!-- / col -->
+				</div>
+				<!-- / row -->
+				<div class="row">
+				<div class="col col-4">
+					<div class="advantages">
+					<span class="icon icon-heart"></span>
+					<div class="title-light text-center">
+						<span>We love minimalism</span>
+					</div>
+					<div class="default-text text-light">
+						<p>Cras luctus interdum sodales. Quisque quis odio dui. Sedes sit amet neque malesuada, lobortis  commodo magna ntesque pharetra metus vivera sagittis.</p>
+					</div>
+					</div>
+				</div>
+				<!-- / col -->
+				<div class="col col-4">
+					<div class="advantages">
+					<span class="icon icon-linegraph"></span>
+					<div class="title-light text-center">
+						<span>We’re responsible</span>
+					</div>
+					<div class="default-text text-light">
+						<p>Fusce aliquet quam eget neque ultrices elementum. Nulla posuere felis id arcu blandit sagittis. Eleifend vestibulum purus, sit amet vulputate risus tristique non.</p>
+					</div>
+					</div>
+				</div>
+				<!-- / col -->
+				<div class="col col-4">
+					<div class="advantages">
+					<span class="icon icon-chat"></span>
+					<div class="title-light text-center">
+						<span>We're Friendly</span>
+					</div>
+					<div class="default-text text-light">
+						<p>Pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend lectus. Praesent sed nisi eleifend, fermentum orci sit amet, iaculis libero interdum.</p>
+					</div>
+					</div>
+				</div>
+				<!-- / col-->
+				</div>
+				<!-- / row -->
+			</div>
+			<!-- / container -->
+		</div>
+		<!-- / why-choose-us --> 
+		<!-- Subscribe -->
+		<div class="small-section subscribe bg-grey text-center">
+			<div class="container">
+				<div class="title section-title-light">
+					<span>Stay informed with OUR NEWSLETTER</span>
+				</div>
+				<!-- /title -->
+				<form>
+					<input type="email" name="email" class="form-control" placeholder="Enter email here">
+					<button type="submit" class="btn btn-black">Subscribe</button>
+				</form>
+				<div class="form-info">
+					<span><i class="fa fa-info-circle"></i>Please trust us, we will never send you spam</span>
+				</div>
+			</div>
+			<!-- container -->
+		</div>
+		<!-- /subscribe -->
 	</div>
 	<!-- Main end -->
 
