--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 									<div class="row">
 										<div class="col col-4">
 											<blockquote>
-												<p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.</p>
-												<span>— Louis Kahn</span>
+												<p>A brand for a company is like a reputation for a person. You earn reputation by trying to do hard things well.</p>
+												<span>— Jeff Bezos</span>
 											</blockquote>	
 										</div>
 										<!-- /col -->
@@ -328,7 +328,7 @@
 				</div>	
 				<!-- /title-portfolio -->
 				<p class="portfolio-text default-text text-center">In auctor ex id urna faucibus porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
-				<div class="portfolio-wrapper">
+				<div class="portfolio-tabs-wrapper">
 					<div id="tabs-portfolio">
 						<ul class="portfolio-tabs-nav">
 							<li>
@@ -344,36 +344,106 @@
 								<a href="#portfolio-photography"><span>Photography</span></span></a>
 							</li>
 						</ul>
-						<div class="row">
-							<div class="portfolio-item">
-								<img src="img/portfolio-item-1.jpg" alt="">
-								</div>
+						<div id="portfolio-all-works">
+							<div class="row">
 								<div class="portfolio-item">
-								<img src="img/portfolio-item-2.jpg" alt="">
-								</div>
-								<div class="portfolio-item">
-									<img src="img/portfolio-item-3.jpg" alt="">
-								</div>
-								<div class="portfolio-item">
-								<img src="img/portfolio-item-4.jpg" alt="">
-								</div>
-								<div class="portfolio-item">
-								<img src="img/portfolio-item-5.jpg" alt="">
-								</div>
-								<div class="portfolio-item">
-								<img src="img/portfolio-item-6.jpg" alt="">
-								</div>
+									<img src="img/portfolio-item-1.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-2.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+										<img src="img/portfolio-item-3.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-4.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-5.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-6.jpg" alt="">
+									</div>
+							</div>
 						</div>
-					
-						<!-- /row -->
+						<!-- /all-works -->
+						<div id="portfolio-branding">
+							<div class="row">
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-1.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-2.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+										<img src="img/portfolio-item-3.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-4.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-5.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-6.jpg" alt="">
+									</div>
+							</div>
+						</div>
+						<!-- /branding -->
+						<div id="portfolio-design">
+							<div class="row">
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-1.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-2.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+										<img src="img/portfolio-item-3.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-4.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-5.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-6.jpg" alt="">
+									</div>
+							</div>
+						</div>
+						<!-- /design  -->
+						<div id="portfolio-photography">
+							<div class="row">
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-1.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-2.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+										<img src="img/portfolio-item-3.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-4.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-5.jpg" alt="">
+									</div>
+									<div class="portfolio-item">
+									<img src="img/portfolio-item-6.jpg" alt="">
+									</div>
+							</div>
+						</div>		
+						<!-- /photography -->
 					</div>
 					<!-- /tabs-portfolio -->
 				</div>
-				<!-- /portfolio-wrapper -->
+				<!-- /portfolio-tabs-wrapper -->
 			</div>
 			<!-- /container -->
 		</div>
-		<!-- /Portfolio -->
+		<!-- /Portfolio  -->
 		<div class="start-pfoject small-section bg-black text-center">
 			<div class="title title-white section-title-light">
 				<span>Like Our Creative Works?</span>
@@ -381,7 +451,6 @@
 			<a href="#" class="btn btn-default">Start Project</a>
 		</div>
 		 <!-- / start project -->
-		 <!-- Why choose us -->
 		 <div class="why-choose-us default-section">
 			<div class="container">
 				<div class="title section-title text-center"> 
@@ -470,6 +539,68 @@
 			<!-- / container -->
 		</div>
 		<!-- / why-choose-us --> 
+		<div class="default-section latest-news">
+			<div class="container">
+				<div class="title section-title">
+					<span>Latest news</span>
+					<a href="" class="news-link">All News in our blog <i class="fa fa-angle-right"></i></a>
+				</div>
+				<!-- /title -->
+				<div class="row">
+					<div class="col col-4">
+						<div class="news-block">
+							<div class="news-img">
+								<a href=""><img src="img/latest-news-1.jpg" alt=""></a>
+							</div>
+							<div class="title-light-grey">
+								<span>New Web Design Trends</span>
+							</div>
+							<div class="author">
+								<span>John Doe | 10 December</span>
+							</div>
+							<p class="default-text">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
+							<a href="" class="btn btn-grey btn-xs">Read More <i class="fa fa-angle-right"></i></a>			
+						</div>
+					</div>
+					<!-- /col -->
+					<div class="col col-4">
+						<div class="news-block">
+							<div class="news-img">
+								<a href=""><img src="img/latest-news-2.jpg" alt=""></a>
+							</div>
+							<div class="title-light-grey">
+								<span>Minimalistic Design Forever</span>
+							</div>
+							<div class="author">
+								<span>John Doe | 9 December</span>
+							</div>
+							<p class="default-text">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
+							<a href="" class="btn btn-grey btn-xs">Read More <i class="fa fa-angle-right"></i></a>			
+						</div>
+					</div>
+					<!-- /col -->
+					<div class="col col-4">
+						<div class="news-block">
+							<div class="news-img">
+								<a href=""><img src="img/latest-news-3.jpg" alt=""></a>
+							</div>
+							<div class="title-light-grey">
+								<span>Hipster’s Style in Web</span>
+							</div>
+							<div class="author">
+								<span>John Doe | 7 December</span>
+							</div>
+							<p class="default-text">Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
+							<a href="" class="btn btn-grey btn-xs">Read More <i class="fa fa-angle-right"></i></a>			
+						</div>
+					</div>
+					<!-- /col -->
+				</div>
+				<!-- /row -->				
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /latest-news -->
 		<!-- Subscribe -->
 		<div class="small-section subscribe bg-grey text-center">
 			<div class="container">
