--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	
     <!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400" rel="stylesheet">
+
+	<!-- Slick icons -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
 	
     <!-- Et-line icons -->
     <link rel="stylesheet" href="css/et-line.css">
@@ -125,7 +128,7 @@
 									</div>
 										<!-- /team-item-img -->
 									<div class="team-item-info text-center">
-										<span class="team-item-name">Steve ANDERS</span>
+										<span class="team-item-name">Steve Anders</span>
 										<span class="team-item-role">Developer</span>
 									</div>
 									<!-- /team-item-info -->
@@ -322,15 +325,17 @@
 		</div>
 		<!-- /lets-talk -->
 		<div class="default-section portfolio">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="title section-title text-center">
 					<span>Portfolio</span>
 				</div>	
 				<!-- /title-portfolio -->
 				<p class="portfolio-text default-text text-center">In auctor ex id urna faucibus porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.</p>
+			</div>
+			<!-- /container -->	
 				<div class="portfolio-tabs-wrapper">
 					<div id="tabs-portfolio">
-						<ul class="portfolio-tabs-nav">
+						<ul class="portfolio-tabs-nav text-center">
 							<li>
 								<a href="#portfolio-all-works"><span>All works</span></span></a>
 							</li>
@@ -348,22 +353,22 @@
 							<div class="row">
 								<div class="portfolio-item">
 									<img src="img/portfolio-item-1.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-2.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
-										<img src="img/portfolio-item-3.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-3.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-4.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-5.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-6.jpg" alt="">
-									</div>
+								</div>
 							</div>
 						</div>
 						<!-- /all-works -->
@@ -371,22 +376,22 @@
 							<div class="row">
 								<div class="portfolio-item">
 									<img src="img/portfolio-item-1.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-2.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
-										<img src="img/portfolio-item-3.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-3.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-4.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-5.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-6.jpg" alt="">
-									</div>
+								</div>
 							</div>
 						</div>
 						<!-- /branding -->
@@ -394,22 +399,22 @@
 							<div class="row">
 								<div class="portfolio-item">
 									<img src="img/portfolio-item-1.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-2.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
-										<img src="img/portfolio-item-3.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-3.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-4.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-5.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-6.jpg" alt="">
-									</div>
+								</div>
 							</div>
 						</div>
 						<!-- /design  -->
@@ -417,31 +422,29 @@
 							<div class="row">
 								<div class="portfolio-item">
 									<img src="img/portfolio-item-1.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-2.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
-										<img src="img/portfolio-item-3.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
+									<img src="img/portfolio-item-3.jpg" alt="">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-4.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-5.jpg" alt="">
-									</div>
-									<div class="portfolio-item">
+								</div>
+								<div class="portfolio-item">
 									<img src="img/portfolio-item-6.jpg" alt="">
-									</div>
+								</div>
 							</div>
 						</div>		
 						<!-- /photography -->
 					</div>
 					<!-- /tabs-portfolio -->
 				</div>
-				<!-- /portfolio-tabs-wrapper -->
-			</div>
-			<!-- /container -->
+				<!-- /portfolio-tabs-wrapper -->			
 		</div>
 		<!-- /Portfolio  -->
 		<div class="start-pfoject small-section bg-black text-center">
@@ -539,6 +542,52 @@
 			<!-- / container -->
 		</div>
 		<!-- / why-choose-us --> 
+		<!-- reviews -->
+		<div class="reviews bg-black">
+			<div class="reviews-carousel">
+				<div>
+					<div class="slide-content text-center">
+						<span class="icon icon-quote"></span>
+						<div class="title section-title-light title-white text-center">
+							<span>What people say?</span>
+						</div>
+						<!-- /title -->
+						<p>Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,risus utaliquam dapibus. Thanks!</p>
+						<span class="review-author">— John Doe, doodle inc.</span>
+					</div>
+					<!-- /slide-content -->
+				</div>
+				<!-- slide -->
+				<div>
+					<div class="slide-content text-center">
+						<span class="icon icon-quote"></span>
+						<div class="title section-title-light title-white text-center">
+							<span>What people say?</span>
+						</div>
+						<!-- /title -->
+						<p>Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,risus utaliquam dapibus. Thanks!</p>
+						<span class="review-author">— John Doe, doodle inc.</span>
+					</div>
+					<!-- /slide-content -->
+				</div>
+				<!-- slide -->
+				<div>
+					<div class="slide-content text-center">
+						<span class="icon icon-quote"></span>
+						<div class="title section-title-light title-white text-center">
+							<span>What people say?</span>
+						</div>
+						<!-- /title -->
+						<p>Phasellus luctus commodo ullamcorper a posuere rhoncus commodo elit. Aenean congue,risus utaliquam dapibus. Thanks!</p>
+						<span class="review-author">— John Doe, doodle inc.</span>
+					</div>
+					<!-- /slide-content -->
+				</div>
+				<!-- slide -->
+			</div>
+			<!-- /carousel -->
+		</div>
+		<!-- /reviews -->
 		<div class="default-section latest-news">
 			<div class="container">
 				<div class="title section-title">
@@ -619,13 +668,119 @@
 			<!-- container -->
 		</div>
 		<!-- /subscribe -->
+		<div class="default-section contacts">
+			<div class="container">
+				<div class="title section-title text-center">
+					<span>Contacts</span>
+				</div>
+				<!-- /title -->
+				<div class="row">
+					<div class="col col-8 m-auto">
+						<div class="contact-items-wrapper">
+							<div class="row">
+								<div class="col col-4">
+									<div class="contact-item">
+										<div class="rhomb-icon black-icon contact-item-icon">
+											<i class="fa fa-phone"></i>
+										</div>
+										<!-- /rhomb-icon -->
+										<div class="contact-item-content">
+											<span class="contact-title">Call us</span>
+											<span class="contact-data">+61 3 8376 6284</span>
+										</div>
+										<!-- /contact-item-content -->
+									</div>
+									<!-- /contact-item -->
+								</div>
+								<!-- /col -->
+								<div class="col col-4">
+									<div class="contact-item">
+										<div class="rhomb-icon black-icon contact-item-icon">
+											<i class="fa fa-map-marker"></i>
+										</div>
+										<!-- /rhomb-icon -->
+										<div class="contact-item-content">
+											<span class="contact-title">Address</span>
+											<span class="contact-data">245 Quigley Blvd. Ste K</span>
+										</div>
+										<!-- /contact-item-content -->
+									</div>
+									<!-- /contact-item -->
+								</div>
+								<!-- /col -->
+								<div class="col col-4">
+									<div class="contact-item">
+										<div class="rhomb-icon black-icon contact-item-icon">
+											<i class="fa fa-envelope"></i>
+										</div>
+										<!-- /rhomb-icon -->
+										<div class="contact-item-content">
+											<span class="contact-title">Email</span>
+											<span class="contact-data">support@bestlooker.pro</span>
+										</div>
+										<!-- /contact-item-content -->
+									</div>
+									<!-- /contact-item -->
+								</div>
+								<!-- /col -->						
+							</div>
+							<!-- /row -->
+						</div>
+						<!-- /contact-items-wrapper -->
+						<form action="contact-form">
+
+						</form>
+						<!-- /contact-form -->
+					</div>
+					<!-- /col -->
+				</div>
+				<!-- /row -->
+			</div>
+			<!-- /container -->
+		</div>
+		<!-- /contacts -->
 	</div>
 	<!-- Main end -->
+	<div class="footer">
+		<div class="container">
+			<div class="footer-logo text-center">
+				<img src="img/footer-logo.png" alt="">
+			</div>
+			<!-- /logo -->
+			<div class="footer-social-nav text-center">
+				<a href="" class="rhomb-icon transparent-icon">
+				<i class="fa fa-facebook"></i>
+				</a>
+				<a href="" class="rhomb-icon transparent-icon">
+				<i class="fa fa-twitter"></i>
+				</a>
+				<a href="" class="rhomb-icon transparent-icon">
+				<i class="fa fa-behance"></i>
+				</a>
+				<a href="" class="rhomb-icon transparent-icon">
+				<i class="fa fa-linkedin"></i>
+				</a>
+				<a href="" class="rhomb-icon transparent-icon">
+				<i class="fa fa-pinterest"></i>
+				</a>
+			</div>
+			<!-- /footer-social-nav -->
+			<div class="footer-copyright text-center">
+				<span class="date-of-creation">&copy;Rhythm 2014</span>
+				<span class="footer-moto">Made with love for great people</span>
+			</div>
+		</div>
+		<!-- /container -->
+	</div>
+	<!-- Footer end -->
 
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 	<!-- JQuery UI -->
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	
+	<!-- Plugins -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
 	<!-- Init plugins -->
 	<script src="js/init.js"></script>
