--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Landing</title>
+	<title>My first project</title>
 	
     <!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400" rel="stylesheet">
@@ -542,7 +542,6 @@
 			<!-- / container -->
 		</div>
 		<!-- / why-choose-us --> 
-		<!-- reviews -->
 		<div class="reviews bg-black">
 			<div class="reviews-carousel">
 				<div>
@@ -650,7 +649,6 @@
 			<!-- /container -->
 		</div>
 		<!-- /latest-news -->
-		<!-- Subscribe -->
 		<div class="small-section subscribe bg-grey text-center">
 			<div class="container">
 				<div class="title section-title-light">
