+scrolls, map, skills

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 			<!-- /logo -->
 			<!-- header-nav -->
 			<ul class="header-nav">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Services</a></li>
-       			<li><a href="#">Works</a></li>
-       			<li><a href="#">Contact</a></li>
+				<li><a href="#" data-scroll=".inner">Home</a></li>
+				<li><a href="#" data-scroll=".about-studio">About</a></li>
+				<li><a href="#" data-scroll=".services">Services</a></li>
+       			<li><a href="#" data-scroll=".portfolio">Works</a></li>
+       			<li><a href="#" data-scroll=".contacts">Contact</a></li>
 			</ul>
 			<!-- /header-nav -->
 		</div>
@@ -55,6 +55,12 @@
 			<!-- /inner content -->
 		</div>
 		<!-- /inner -->
+		<div class="arrow-down">
+			<a href="#" data-scroll=".about-studio" class="rhomb-icon white-icon">
+				<i class="fa fa-chevron-down"></i>
+			</a>
+		</div>
+		<!-- /arrow-down -->
 		<div class="default-section about-studio">
 			<div class="container">
 				<div class="title section-title">
@@ -92,7 +98,46 @@
 							<div class="team-item">
 								<div class="team-item-img">
 									<img src="img/team-item-1.jpg" alt="">
-									<div class="team-item-skills"></div>
+									<div class="team-item-skills">
+										<div class="title title-white section-title-light">
+											<span>Skills</span>
+										</div>
+										<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.</p>
+										<div class="skill-item">
+											<span class="skill-name">Branding</span>
+											<div class="progress-wrapp">
+												<div class="progress branding"></div>
+												<!-- progress branding-->
+											</div>
+											<!-- /progress-wrapp -->
+										</div>
+										<!-- skill-item -->
+										<div class="skill-item">
+											<span class="skill-name">Design</span>
+											<div class="progress-wrapp">
+												<div class="progress design"></div>
+												<!-- progress design-->
+											</div>
+											<!-- /progress-wrapp -->
+										</div>
+										<div class="skill-item">
+											<span class="skill-name">Development</span>
+											<div class="progress-wrapp">
+												<div class="progress development"></div>
+												<!-- progress development-->
+											</div>
+											<!-- /progress-wrapp -->
+										</div>
+										<div class="skill-item">
+											<span class="skill-name">Photography</span>
+											<div class="progress-wrapp">
+												<div class="progress photography"></div>
+												<!-- progress photography-->
+											</div>
+											<!-- /progress-wrapp -->
+										</div>				
+									</div>
+									<!-- /team-item-skills -->
 								</div>
 								<!-- /team-item-img -->
 								<div class="team-item-info text-center">
@@ -108,7 +153,46 @@
 								<div class="team-item">
 									<div class="team-item-img">
 										<img src="img/team-item-2.jpg" alt="">
-										<div class="team-item-skills"></div>
+										<div class="team-item-skills">
+											<div class="title title-white section-title-light">
+												<span>Skills</span>
+											</div>
+											<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.</p>
+											<div class="skill-item">
+												<span class="skill-name">Branding</span>
+												<div class="progress-wrapp">
+													<div class="progress branding"></div>
+													<!-- progress branding-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>
+											<!-- skill-item -->
+											<div class="skill-item">
+												<span class="skill-name">Design</span>
+												<div class="progress-wrapp">
+													<div class="progress design"></div>
+													<!-- progress design-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>
+											<div class="skill-item">
+												<span class="skill-name">Development</span>
+												<div class="progress-wrapp">
+													<div class="progress development"></div>
+													<!-- progress development-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>
+											<div class="skill-item">
+												<span class="skill-name">Photography</span>
+												<div class="progress-wrapp">
+													<div class="progress photography"></div>
+													<!-- progress photography-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>				
+										</div>
+										<!-- /team-item-skills -->
 									</div>
 									<!-- /team-item-img -->
 									<div class="team-item-info text-center">
@@ -124,7 +208,46 @@
 								<div class="team-item">
 									<div class="team-item-img">
 										<img src="img/team-item-3.jpg" alt="">
-										<div class="team-item-skills"></div>
+										<div class="team-item-skills">
+											<div class="title title-white section-title-light">
+												<span>Skills</span>
+											</div>
+											<p>Curabitur iaculis accumsan augue, nec finibus mauris pretium eu. Duis placerat ex gravida nibh tristique porta.</p>
+											<div class="skill-item">
+												<span class="skill-name">Branding</span>
+												<div class="progress-wrapp">
+													<div class="progress branding"></div>
+													<!-- progress branding-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>
+											<!-- skill-item -->
+											<div class="skill-item">
+												<span class="skill-name">Design</span>
+												<div class="progress-wrapp">
+													<div class="progress design"></div>
+													<!-- progress design-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>
+											<div class="skill-item">
+												<span class="skill-name">Development</span>
+												<div class="progress-wrapp">
+													<div class="progress development"></div>
+													<!-- progress development-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>
+											<div class="skill-item">
+												<span class="skill-name">Photography</span>
+												<div class="progress-wrapp">
+													<div class="progress photography"></div>
+													<!-- progress photography-->
+												</div>
+												<!-- /progress-wrapp -->
+											</div>				
+										</div>
+										<!-- /team-item-skills -->
 									</div>
 										<!-- /team-item-img -->
 									<div class="team-item-info text-center">
@@ -720,13 +843,27 @@
 									</div>
 									<!-- /contact-item -->
 								</div>
-								<!-- /col -->						
+								<!-- /col -->					
 							</div>
 							<!-- /row -->
 						</div>
 						<!-- /contact-items-wrapper -->
-						<form action="contact-form">
-
+						<form class="contact-form">
+							<div class="form-col">
+								<input type="text" name="user-name" id="user-name" class="form-control" placeholder="Name">
+								<input type="text" name="user-email" id="user-email" class="form-control" placeholder="Email">
+							</div>
+							<!-- /form-col -->
+							<div class="form-col">
+								<textarea name="user-message" id="user-message" class="form-control" placeholder="Message"></textarea>
+							</div>
+							<!-- /form-col -->
+							<div class="form-info pull-left">
+								<span><i class="fa fa-info-circle"></i>All the fields are required</span>
+							</div>
+							<!-- /form-info -->
+							<button type="submit" class="btn btn-black pull-right">Submit message</button>
+							<!-- /button -->
 						</form>
 						<!-- /contact-form -->
 					</div>
@@ -738,8 +875,27 @@
 		</div>
 		<!-- /contacts -->
 	</div>
+	<div class="map-container">
+		<div id="map">
+		<div class="on-map-block">
+			<div class="on-map-block-content">
+				<div class="rhomb-icon white-icon large-icon">
+					<i class="fa fa-map-marker"></i>
+				</div>
+			<div class="title title-white">
+				<span>Open the map</span>
+				<i class="fa fa-angle-down"></i>
+			</div>
+			</div>
+			<!-- /on-map-content -->
+		</div>
+		<!--/on-map-block  -->
+	</div>
+	<!-- /map -->
+	</div>
+	<!-- /map-container -->
 	<!-- Main end -->
-	<div class="footer">
+	<div class="footer bg-grey">
 		<div class="container">
 			<div class="footer-logo text-center">
 				<img src="img/footer-logo.png" alt="">
@@ -747,20 +903,15 @@
 			<!-- /logo -->
 			<div class="footer-social-nav text-center">
 				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-facebook"></i>
-				</a>
+				<i class="fa fa-facebook"></i></a>
 				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-twitter"></i>
-				</a>
+				<i class="fa fa-twitter"></i></a>
 				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-behance"></i>
-				</a>
+				<i class="fa fa-behance"></i></a>
 				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-linkedin"></i>
-				</a>
+				<i class="fa fa-linkedin"></i></a>
 				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-pinterest"></i>
-				</a>
+				<i class="fa fa-pinterest"></i></a>		
 			</div>
 			<!-- /footer-social-nav -->
 			<div class="footer-copyright text-center">
@@ -772,15 +923,32 @@
 	</div>
 	<!-- Footer end -->
 
+	<!-- Arrow up -->
+	<div class="arrow-up">
+		<i class="fa fa-caret-up" data-scroll=".inner"></i>
+	</div>
 	<!-- JQuery -->
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+
 	<!-- JQuery UI -->
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+	<!-- Google map API -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBbAwVWD1bSd9CXC70RPU5_ViQsMfNLSQ&callback=initMap"
+	async defer></script>
+	
+	<!-- Init Google map -->
+	<script src="js/google-maps.js"></script>
 	
 	<!-- Plugins -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
+	<!-- Show header on scroll -->
+	<script src="js/header-scroll.js"></script>
+	<!-- Scroll to -->
+	<script src="js/scroll-to.js"></script>
 	<!-- Init plugins -->
 	<script src="js/init.js"></script>
 </body>
 </html>
+
