--- a/guide.html
+++ b/guide.html
@@ -199,6 +199,13 @@
 			<!-- /guid-section -->
 
 		</div>
+	<!-- JQuery -->
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 
+	<!-- JQuery UI -->
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+	<!-- Init plugins -->
+	<script src="js/init.js"></script>
   </body>
 </html>
