--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>My first project</title>
+	<title>Thomas Rhythm</title>
 	
     <!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Dosis:300,400|Open+Sans:300,400" rel="stylesheet">
@@ -59,7 +59,7 @@
 		</div>
 		<!-- /inner -->
 		<div class="arrow-down">
-			<a href="#" data-scroll=".about-studio" class="rhomb-icon white-icon">
+			<a href="#" data-scroll=".about-studio" class="rhomb-icon white-icon down-icon">
 				<i class="fa fa-chevron-down"></i>
 			</a>
 		</div>
@@ -72,20 +72,20 @@
 				<!-- /title -->
 				<div class="about-us-text">
 					<div class="row">
-						<div class="col col-4 col-md-12 col-xs-12">
+						<div class="col col-4 col-md-12 col-sm-12 col-xs-12">
 							<blockquote>
 								<p>Design is not making beauty, beauty emerges from selection, affinities, integration, love.</p>
 								<span>— Louis Kahn</span>
 							</blockquote>	
 						</div>
 						<!-- /col -->
-						<div class="col col-4 col-md-6 col-sm-6">
+						<div class="col col-4 col-md-6 col-sm-6 col-xs-6">
 							<p class="default-text">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus. 
 							</p>
 						</div>
 						<!--/ col -->
-						<div class="col col-4 col-md-6 col-sm-6">
+						<div class="col col-4 col-md-6 col-sm-6 col-xs-6">
 							<p class="default-text">
 								Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam ipsum.
 							</p>
@@ -427,7 +427,7 @@
 		<div class="lets-talk bg-black">
 			<div class="container">
 				<div class="row">
-					<div class="col col-6 col-md-12">
+					<div class="col col-6 col-md-12 col-xs-12">
 						<div class="lets-talk-content">
 							<div class="title section-title-light title-white">
 							<span>Looking for exclusive digital services?</span>
@@ -463,16 +463,16 @@
 					<div id="tabs-portfolio">
 						<ul class="portfolio-tabs-nav text-center">
 							<li>
-								<a href="#portfolio-all-works"><span>All works</span></span></a>
+								<a href="#portfolio-all-works"><span>All works</span></a>
 							</li>
 							<li>
-								<a href="#portfolio-branding"><span>Branding</span></span></a>
+								<a href="#portfolio-branding"><span>Branding</span></a>
 							</li>
 							<li>
-								<a href="#portfolio-design"><span> Design</span></span></a>
+								<a href="#portfolio-design"><span> Design</span></a>
 							</li>
 							<li>
-								<a href="#portfolio-photography"><span>Photography</span></span></a>
+								<a href="#portfolio-photography"><span>Photography</span></a>
 							</li>
 						</ul>
 						<div id="portfolio-all-works">
@@ -586,7 +586,7 @@
 				<span>Why Choose Us?</span>
 				</div>
 				<div class="row">
-				<div class="col col-4 col-md-12">
+				<div class="col col-4 col-md-12 col-sm-12">
 					<div class="advantages">
 					<span class="icon icon-flag"></span>
 					<div class="title-light text-center">
@@ -599,7 +599,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4 col-md-12">
+				<div class="col col-4 col-md-12 col-sm-12">
 					<div class="advantages">
 					<span class="icon icon-clock"></span>
 					<div class="title-light text-center">
@@ -611,7 +611,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4 col-md-12">
+				<div class="col col-4 col-md-12 col-sm-12">
 					<div class="advantages">
 					<span class="icon icon-hotairballoon"></span>
 					<div class="title-light text-center">
@@ -626,7 +626,7 @@
 				</div>
 				<!-- / row -->
 				<div class="row">
-				<div class="col col-4 col-md-12">
+				<div class="col col-4 col-md-12 col-sm-12">
 					<div class="advantages">
 					<span class="icon icon-heart"></span>
 					<div class="title-light text-center">
@@ -638,7 +638,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4 col-md-12">
+				<div class="col col-4 col-md-12 col-sm-12">
 					<div class="advantages">
 					<span class="icon icon-linegraph"></span>
 					<div class="title-light text-center">
@@ -650,7 +650,7 @@
 					</div>
 				</div>
 				<!-- / col -->
-				<div class="col col-4 col-md-12">
+				<div class="col col-4 col-md-12 col-sm-12">
 					<div class="advantages">
 					<span class="icon icon-chat"></span>
 					<div class="title-light text-center">
@@ -883,54 +883,64 @@
 			<!-- /container -->
 		</div>
 		<!-- /contacts -->
-	</div>
-	<div class="map-container">
+		<div class="map-container">
 		<div id="map"></div>
-		<div class="on-map-block">
-			<div class="on-map-block-content">
-				<div class="rhomb-icon white-icon large-icon">
-					<i class="fa fa-map-marker"></i>
+			<div class="on-map-block">
+				<div class="on-map-block-content">
+					<div class="rhomb-icon white-icon large-icon">
+						<i class="fa fa-map-marker"></i>
 				</div>
-				<div class="title title-white">
-					<span>Open the map <i class="fa fa-angle-down"></i></span>
-				</div>			
-			</div>
+			<div class="title title-white">
+				<span>Open the map <i class="fa fa-angle-down"></i></span>
+			</div>			
+				</div>
 			<!-- /on-map-content -->
+			</div>
+			<!--/on-map-block  -->
 		</div>
-		<!--/on-map-block  -->
-	</div>
-	<!-- /map -->
-	</div>
-	<!-- /map-container -->
+		<!-- /map-container -->
+    </div>
 	<!-- Main end -->
 	<div class="footer bg-grey">
-		<div class="container">
-			<div class="footer-logo text-center">
-				<img src="img/footer-logo.png" alt="">
+		<div class="footer-container text-center">
+			<div class="footer-logo">
+				<a href="#">
+					<img src="img/footer-logo.png" alt="">
+				</a>
 			</div>
-			<!-- /logo -->
-			<div class="footer-social-nav text-center">
-				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-facebook"></i></a>
-				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-twitter"></i></a>
-				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-behance"></i></a>
-				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-linkedin"></i></a>
-				<a href="" class="rhomb-icon transparent-icon">
-				<i class="fa fa-pinterest"></i></a>		
-			</div>
-			<!-- /footer-social-nav -->
-			<div class="footer-copyright text-center">
-				<span class="date-of-creation">&copy;Rhythm 2014</span>
+			<!-- /footer-logo -->
+			<ul class="footer-social-nav">
+				<li>
+					<a href="#" class="rhomb-icon transparent-icon">
+					<i class="fa fa-facebook"></i></a>
+				</li>
+				<li>
+					<a href="#" class="rhomb-icon transparent-icon">
+					<i class="fa fa-twitter"></i></a>
+				</li>
+				<li>
+					<a href="#" class="rhomb-icon transparent-icon">
+					<i class="fa fa-behance"></i></a>
+				</li>
+				<li>
+					<a href="#" class="rhomb-icon transparent-icon">
+					<i class="fa fa-linkedin"></i></a>
+				</li>
+				<li>
+					<a href="#" class="rhomb-icon transparent-icon">
+					<i class="fa fa-pinterest"></i></a>
+				</li>
+			</ul>	
+			<!--/footer-social-nav  -->
+			<div class="footer-copywright">				
+				<span class="date-of-creation">&copy; Rhythm 2014 </span>
 				<span class="footer-moto">Made with love for great people</span>
 			</div>
-		</div>
-		<!-- /container -->
+			<!-- /footer-copywright -->
+		</div> 
+		<!-- /footer-container -->
 	</div>
-	<!-- Footer end -->
-
+	<!-- /footer end -->
 	<!-- Arrow up -->
 	<div class="arrow-up">
 		<i class="fa fa-caret-up" data-scroll=".inner"></i>
